--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,15 +13,16 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitStart"
-        android:src="@drawable/background1" />
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:src="@drawable/background" />
 
     <ImageView
         android:id="@+id/picture"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
         android:src="@drawable/androidify" />
 
@@ -35,7 +36,7 @@
         android:textColor="#000000"
         android:fontFamily="sans-serif-light"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:text="David Katić" />
 
     <TextView
@@ -51,27 +52,27 @@
         android:text="Android Programmer" />
 
     <TextView
-        android:id="@+id/other"
+        android:id="@+id/contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:textSize="20sp"
         android:textStyle="italic|bold"
         android:textColor="#000000"
         android:fontFamily="sans-serif-light"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Adress:\nCroatia\nPhone:\n00385 12 3456 789\nEmail:\ndavid.katic@gmail.com\nGitHub:\nhttps://github.com/dkatic" />
+        android:text="Addres:\nCroatia\nPhone:\n00385 12 3456 789\nEmail:\ndavid.katic@gmail.com\nGitHub:\nhttps://github.com/dkatic" />
 
     <ImageView
         android:id="@+id/qr"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/other"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/contact"
+        android:layout_marginBottom="20dp"
         android:scaleType="centerCrop"
         android:src="@drawable/qrcode" />
 
