--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:src="@drawable/background" />
@@ -22,7 +22,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
         android:src="@drawable/androidify" />
 
@@ -31,12 +31,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/picture"
-        android:textSize="36sp"
+        android:textAppearance="?android:textAppearanceLarge"
         android:textStyle="bold"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:fontFamily="sans-serif-light"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="David Katić" />
 
     <TextView
@@ -44,35 +44,77 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/name"
-        android:textSize="25sp"
+        android:textAppearance="?android:textAppearanceLarge"
         android:textStyle="bold"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:fontFamily="sans-serif-light"
         android:layout_centerHorizontal="true"
-        android:text="Android Programmer" />
+        android:text="Programmer" />
 
     <TextView
-        android:id="@+id/contact"
+        android:id="@+id/addres"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
+        android:layout_marginTop="16dp"
+        android:textAppearance="?android:textAppearanceMedium"
         android:textStyle="italic|bold"
-        android:textColor="#000000"
+        android:textColor="#fff700"
         android:fontFamily="sans-serif-light"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Addres:\nCroatia\nPhone:\n00385 12 3456 789\nEmail:\ndavid.katic@gmail.com\nGitHub:\nhttps://github.com/dkatic" />
+        android:text="Addres: Croatia" />
+
+    <TextView
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/addres"
+        android:layout_marginTop="16dp"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textStyle="italic|bold"
+        android:textColor="#fff700"
+        android:fontFamily="sans-serif-light"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="Phone: 00385 12 345 6789" />
+
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/phone"
+        android:layout_marginTop="16dp"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textStyle="italic|bold"
+        android:textColor="#fff700"
+        android:fontFamily="sans-serif-light"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="Email: david.katic@gmail.com" />
+
+    <TextView
+        android:id="@+id/git"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/email"
+        android:layout_marginTop="16dp"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textStyle="italic|bold"
+        android:textColor="#fff700"
+        android:fontFamily="sans-serif-light"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="GitHub: https://github.com/dkatic" />
 
     <ImageView
         android:id="@+id/qr"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/contact"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/git"
+        android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
         android:src="@drawable/qrcode" />
 
